[+] space between home buttons

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                     <span class="visually-hidden">Loading...</span>
                 </div>
                 <div class="button-box col-lg-12">
-                    <a href="./catalogo.html" class="btn btn-outline-success btn-lg" role="button">Catalogo</a>
-                    <a href="./videos.html" class="btn btn-outline-success btn-lg" role="button">Videos Tutoriales</a>
+                    <a href="./catalogo.html" style="margin: 10px;" class="btn btn-outline-success btn-lg" role="button">Catalogo</a>
+                    <a href="./videos.html" style="margin: 10px;" class="btn btn-outline-success btn-lg" role="button">Videos Tutoriales</a>
                 </div>
         </div>
     </div>
